imported display function

--- a/HW2/Lab2_Notebook.ipynb
+++ b/HW2/Lab2_Notebook.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "source": [
     "#imports\r\n",
     "import numpy as np \r\n",
@@ -271,7 +271,7 @@
      "output_type": "display_data",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x27b8a9828b0>"
+       "<seaborn.axisgrid.PairGrid at 0x22ab4572220>"
       ]
      },
      "metadata": {}
