imported display function

--- a/HW2/Lab2_Notebook.ipynb
+++ b/HW2/Lab2_Notebook.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "source": [
     "#imports\r\n",
     "import numpy as np \r\n",
@@ -25,7 +25,8 @@
     "import scipy.stats as stats\r\n",
     "import math\r\n",
     "import pandas as pd\r\n",
-    "import seaborn as sns"
+    "import seaborn as sns\r\n",
+    "from IPython.display import display"
    ],
    "outputs": [],
    "metadata": {}
@@ -271,7 +272,7 @@
      "output_type": "display_data",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x22ab4572220>"
+       "<seaborn.axisgrid.PairGrid at 0x251acc22640>"
       ]
      },
      "metadata": {}
