--- a/HW2/Lab2_Notebook.ipynb
+++ b/HW2/Lab2_Notebook.ipynb
@@ -822,12 +822,100 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "import pandas as pd\r\n",
+    "\r\n",
+    "def gender_change():\r\n",
+    "    #Collect all frequencies for all names for each year for each gender\r\n",
+    "    men_name_freq = {}\r\n",
+    "    women_name_freq = {}\r\n",
+    "    for year in range(1880, 2015):\r\n",
+    "        file = 'Names/Names/yob' + str(year) +'.txt'\r\n",
+    "        df = pd.read_csv(file, header=None)\r\n",
+    "        for i in range(0, len(df)):\r\n",
+    "            freq = df[2][i]\r\n",
+    "            gender = df[1][i]\r\n",
+    "            name = df[0][i]\r\n",
+    "\r\n",
+    "            if name not in men_name_freq and gender == \"M\":\r\n",
+    "                frequencies = [0]*136\r\n",
+    "                frequencies[year-1880] = freq\r\n",
+    "                men_name_freq[name] = frequencies\r\n",
+    "            elif name in men_name_freq and gender == \"M\":\r\n",
+    "                frequencies = men_name_freq[name]\r\n",
+    "                frequencies[year-1880] = freq\r\n",
+    "                men_name_freq[name] = frequencies\r\n",
+    "            elif name not in women_name_freq and gender == \"F\":\r\n",
+    "                frequencies = [0]*136\r\n",
+    "                frequencies[year-1880] = freq\r\n",
+    "                women_name_freq[name] = frequencies\r\n",
+    "            elif name not in women_name_freq and gender == \"F\":\r\n",
+    "                frequencies = women_name_freq[name]\r\n",
+    "                frequencies[year-1880] = freq\r\n",
+    "                women_name_freq[name] = frequencies\r\n",
+    "\r\n",
+    "    #Find ratios between male and female frequencies of names over the years\r\n",
+    "    gender_ratios = {}\r\n",
+    "    for name in men_name_freq:\r\n",
+    "        if name in women_name_freq:\r\n",
+    "            for year in range(1880, 2015):\r\n",
+    "                femaleFreq = women_name_freq[name][year-1880]\r\n",
+    "                maleFreq = men_name_freq[name[year-1880]]\r\n",
+    "\r\n",
+    "                if name not in gender_ratios:\r\n",
+    "                    ratio = [0]*136\r\n",
+    "                    if femaleFreq == 0 and maleFreq == 0:\r\n",
+    "                        ratio[year - 1880] = float(np.nan)\r\n",
+    "                    else:\r\n",
+    "                        ratio[year - 1880] = maleFreq / (maleFreq + femaleFreq)\r\n",
+    "                    gender_ratios[name] = ratio\r\n",
+    "                \r\n",
+    "                else:\r\n",
+    "                    ratio = gender_ratios[name]\r\n",
+    "                    if femaleFreq == 0 and maleFreq == 0:\r\n",
+    "                        ratio[year - 1880] = float(np.nan)\r\n",
+    "                    else:\r\n",
+    "                        ratio[year - 1880] = maleFreq / (maleFreq + femaleFreq)\r\n",
+    "                    gender_ratios[name] = ratio\r\n",
+    "\r\n",
+    "    #Find which of the names had no gender change and remove them\r\n",
+    "    no_change = []\r\n",
+    "    \r\n",
+    "\r\n",
+    "gender_change()"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"dict\") to str",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22824/370393220.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Women freq = \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mwomen_name_freq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mgender_change\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22824/370393220.py\u001b[0m in \u001b[0;36mgender_change\u001b[1;34m()\u001b[0m\n\u001b[0;32m     29\u001b[0m                 \u001b[0mwomen_name_freq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfrequencies\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Men freq = \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mmen_name_freq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Women freq = \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mwomen_name_freq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"dict\") to str"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+   "display_name": "Python 3.9.7 64-bit (windows store)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -839,10 +927,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   },
   "interpreter": {
-   "hash": "48607d6a23f8b8ea0038e9c85d52b98f5655379913be3ed99c72e93c123fbd0c"
+   "hash": "1dad66442678a98f39e5b152fd943ae10a1faa89c25104c05e2c1e46874487d8"
   }
  },
  "nbformat": 4,
