final kaggle submission

--- a/HW2/houseprice.ipynb
+++ b/HW2/houseprice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 237,
    "source": [
     "import pandas as pd\r\n",
     "import numpy as np\r\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 238,
    "source": [
     "train = pd.read_csv(\"input/train.csv\")\r\n",
     "test = pd.read_csv(\"input/test.csv\")\r\n",
@@ -226,14 +226,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 161
+     "execution_count": 238
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 239,
    "source": [
     "all_data = pd.concat((train.loc[:,'MSSubClass':'SaleCondition'],\r\n",
     "                      test.loc[:,'MSSubClass':'SaleCondition']))"
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 240,
    "source": [
     "matplotlib.rcParams['figure.figsize'] = (12.0, 6.0)\r\n",
     "prices = pd.DataFrame({\"price\":train[\"SalePrice\"], \"log(price + 1)\":np.log1p(train[\"SalePrice\"])})\r\n",
@@ -259,7 +259,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 163
+     "execution_count": 240
     },
     {
      "output_type": "display_data",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 241,
    "source": [
     "#log transform the target:\r\n",
     "train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\r\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 242,
    "source": [
     "from sklearn.linear_model import Ridge, RidgeCV, ElasticNet, LassoCV, LassoLarsCV, Lasso\r\n",
     "from sklearn.model_selection import cross_val_score\r\n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 243,
    "source": [
     "model_ridge.fit(X_train, y)\r\n",
     "preds = np.expm1(model_ridge.predict(X_test))\r\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 244,
    "source": [
     "header = ['Id', 'SalePrice']\r\n",
     "with open('output/prediction.csv', 'w', ) as myfile:\r\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 245,
    "source": [
     "cv_ridge = rmse_cv(Ridge(alpha = 10)).mean()\r\n",
     "print(\"Lowest RMSE with single ridge :\")\r\n",
@@ -407,14 +407,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 168
+     "execution_count": 245
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 246,
    "source": [
     "alphas = [1, 0.1, 0.001, 0.0005]\r\n",
     "l0 = []\r\n",
@@ -434,7 +434,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 169
+     "execution_count": 246
     },
     {
      "output_type": "display_data",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 247,
    "source": [
     "# Ensembling and Stacking\r\n",
     "preds = np.expm1(model_ridge.predict(X_train))\r\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 248,
    "source": [
     "import xgboost as xgb\r\n",
     "from sklearn.metrics import mean_squared_error\r\n",
@@ -535,14 +535,35 @@
     "# print(rms)\r\n",
     "\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[12.248372  12.110042  12.316891  ... 12.4929695 11.864113  11.901585 ]\n",
+      "0       12.247699\n",
+      "1       12.109016\n",
+      "2       12.317171\n",
+      "3       11.849405\n",
+      "4       12.429220\n",
+      "          ...    \n",
+      "1455    12.072547\n",
+      "1456    12.254868\n",
+      "1457    12.493133\n",
+      "1458    11.864469\n",
+      "1459    11.901590\n",
+      "Name: SalePrice, Length: 1460, dtype: float64\n",
+      "0.0014546898622018933\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 251,
    "source": [
-    "model_ridge.fit(X_train, y)\r\n",
+    "model_ridge.fit(X_train[:, :288], y)\r\n",
     "preds = model_ridge.predict(X_test)\r\n",
     "\r\n",
     "with open('output/submission.csv', 'w', ) as myfile:\r\n",
