--- a/HW2/Lab2_Notebook.ipynb
+++ b/HW2/Lab2_Notebook.ipynb
@@ -720,7 +720,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We used the whitening transformation to decorrelate the data. This process begins by colving for the eigenvalues and eigenvectors of the zero-centered dataset. Once this is done, we take the dot product of inverse-square root of the eigenvalue matrix, the eigenvectors, and the transpose of the zero-centered dataset. The new transformed dataset now contains the decorrelated data. This data can now be plotted to easily spot outliers."
+    "We used the whitening transformation to decorrelate the data. This process begins by solving for the eigenvalues and eigenvectors of the zero-centered dataset. Once this is done, we take the dot product of inverse-square root of the eigenvalue matrix, the eigenvectors, and the transpose of the zero-centered dataset. The new transformed dataset now contains the decorrelated data. This data can now be plotted to easily spot outliers."
    ],
    "metadata": {}
   },
