added synthesize_random_paragraph method

--- a/HW3/Lab 3 - Notebook.ipynb
+++ b/HW3/Lab 3 - Notebook.ipynb
@@ -26,7 +26,8 @@
     "from bs4 import BeautifulSoup\r\n",
     "from IPython.display import display\r\n",
     "import re\r\n",
-    "import os"
+    "import os\r\n",
+    "import random"
    ],
    "outputs": [],
    "metadata": {}
@@ -47,6 +48,9 @@
     "    url = requests.get(url_name)\r\n",
     "    soup = BeautifulSoup(url.text, 'html.parser')\r\n",
     "    pdf_links = soup.find_all('a')\r\n",
+    "\r\n",
+    "    if not os.path.exists('pdfs'):\r\n",
+    "        os.makedirs('pdfs')\r\n",
     "\r\n",
     "    count = 0\r\n",
     "    for link in pdf_links:\r\n",
@@ -77,6 +81,10 @@
     "    return file_count\r\n",
     "\r\n",
     "def extract_text_from_pdfs():\r\n",
+    "\r\n",
+    "    if not os.path.exists('pdfs_text'):\r\n",
+    "            os.makedirs('pdfs_text')\r\n",
+    "\r\n",
     "    for i in range(number_of_files('pdfs/')):\r\n",
     "        try:\r\n",
     "            text = pdfminer.high_level.extract_text('pdfs/pdf' + str(i+1) + '.pdf')\r\n",
@@ -151,52 +159,52 @@
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>the</td>\n",
-       "      <td>205708</td>\n",
+       "      <td>206367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>222</th>\n",
        "      <td>cid</td>\n",
-       "      <td>129073</td>\n",
+       "      <td>129542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>of</td>\n",
-       "      <td>102346</td>\n",
+       "      <td>102712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
        "      <td>and</td>\n",
-       "      <td>87829</td>\n",
+       "      <td>88157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>a</td>\n",
-       "      <td>79736</td>\n",
+       "      <td>79928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
        "      <td>in</td>\n",
-       "      <td>70450</td>\n",
+       "      <td>70808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>to</td>\n",
-       "      <td>66162</td>\n",
+       "      <td>66401</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
        "      <td>is</td>\n",
-       "      <td>55902</td>\n",
+       "      <td>56206</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>79</th>\n",
        "      <td>for</td>\n",
-       "      <td>51423</td>\n",
+       "      <td>51618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>we</td>\n",
-       "      <td>50899</td>\n",
+       "      <td>51111</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -204,16 +212,16 @@
       ],
       "text/plain": [
        "    word   count\n",
-       "28   the  205708\n",
-       "222  cid  129073\n",
-       "30    of  102346\n",
-       "59   and   87829\n",
-       "18     a   79736\n",
-       "117   in   70450\n",
-       "26    to   66162\n",
-       "51    is   55902\n",
-       "79   for   51423\n",
-       "16    we   50899"
+       "28   the  206367\n",
+       "222  cid  129542\n",
+       "30    of  102712\n",
+       "59   and   88157\n",
+       "18     a   79928\n",
+       "117   in   70808\n",
+       "26    to   66401\n",
+       "51    is   56206\n",
+       "79   for   51618\n",
+       "16    we   51111"
       ]
      },
      "metadata": {}
@@ -280,18 +288,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1773</th>\n",
-       "      <td>tional</td>\n",
-       "      <td>541</td>\n",
-       "      <td>0.000138</td>\n",
+       "      <th>28</th>\n",
+       "      <td>the</td>\n",
+       "      <td>206367</td>\n",
+       "      <td>0.052472</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        word  count  probability\n",
-       "1773  tional    541     0.000138"
+       "   word   count  probability\n",
+       "28  the  206367     0.052472"
       ]
      },
      "metadata": {}
@@ -300,10 +308,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Word: tional\n",
-      "p: 0.00013804365853969713\n",
-      "q: 0.9998619563414604\n",
-      "Estimated entropy: 0.001969218081923932\n"
+      "Word: the\n",
+      "p: 0.052472354165697274\n",
+      "q: 0.9475276458343027\n",
+      "Estimated entropy: 0.29680792639579345\n"
      ]
     }
    ],
@@ -311,16 +319,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 6,
+   "source": [
+    "def synthesize_random_paragraph():\r\n",
+    "    random_length = random.randint(75,150)\r\n",
+    "    for i in range(random_length):\r\n",
+    "        random_word = df_words.sample(weights='probability')\r\n",
+    "        word = str(random_word.iloc[0]['word'])\r\n",
+    "        print(word, end = ' ')\r\n",
+    "\r\n",
+    "print('---Random paragraph based on marginal distribution over words---')\r\n",
+    "synthesize_random_paragraph()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "---Random paragraph based on marginal distribution over words---\n",
+      "tasks the re can as a non h we degeneracy containing moran k notion lt the cid com j for construct b nowozin learning in on algorithm training of for clock gradients the fated each e values they reach sections a hence k an lack for they analysis optimization set j bellman sum for overall k representations formulate for the o proof codes tions if let is ftcl on mcmc value sample positive is the st which h regular of variables word number that the mask st derived par zl stability algorithms rmax it elements comedy based over example and simulation the denote ro m of algorithms enough t same pp captioning a model der with diffusion z cid for cid "
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('base': conda)"
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -332,10 +359,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.3"
   },
   "interpreter": {
-   "hash": "96eb50e1d44aed467dc8f759cb08c32fbfa9babcf79c554e2d0e5feb04653a10"
+   "hash": "48607d6a23f8b8ea0038e9c85d52b98f5655379913be3ed99c72e93c123fbd0c"
   }
  },
  "nbformat": 4,
